Fix a leak when the directory listing is pulled from the cache (bug 199425). r=bbaetz, sr=darin.